# AlfredOS

./: .coderabbit.yaml  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  PRD.md  README.md  SECURITY.md  alembic.ini  babel.cfg  docker-compose.yaml  lefthook.yml  pyproject.toml
.claude/agents/: alfred-architect.md  alfred-comms-engineer.md  alfred-core-engineer.md  alfred-devops-engineer.md  alfred-memory-engineer.md  alfred-persona-engineer.md  alfred-provider-engineer.md  alfred-reviewer.md  alfred-security-engineer.md  alfred-test-engineer.md
.devin/: wiki.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  persona_proposal.yml  skill_proposal.yml
.github/workflows/: adversarial.yml  bwrap-userns-validation.yml  ci.yml  cla.yml  codeql.yml  docs-check.yml  nightly.yml  perf.yml  pr-validate-commits.yml  pr-validate-python.yml  pr-validate-security.yml  release.yml  zz-experiment-g6-0b-spawn-probe.yml
.rulesync/commands/: review-plan.md  review-pr.md
.rulesync/rules/: CLAUDE.md
.rulesync/subagents/: alfred-ai-expert.md  alfred-architect.md  alfred-comms-engineer.md  alfred-core-engineer.md  alfred-devex-reviewer.md  alfred-devops-engineer.md  alfred-docs-author.md  alfred-docs-reviewer.md  alfred-error-reviewer.md  alfred-i18n-reviewer.md  alfred-memory-engineer.md  alfred-performance-reviewer.md  alfred-persona-engineer.md  alfred-provider-engineer.md  alfred-python-developer.md  alfred-review-coordinator.md  alfred-reviewer.md  alfred-security-engineer.md  alfred-test-engineer.md  alfred-uat.md
config/: alfred.toml  policies.yaml  routing.yaml
config/sandbox/: README.md  discord-adapter.linux.bwrap.policy  discord-adapter.macos.sb  discord-adapter.windows.stub.policy  quarantined-llm.linux.bwrap.policy  quarantined-llm.macos.sb  quarantined-llm.windows.stub.policy
docker/: alfred-core.Dockerfile
docker/apparmor/: alfred-bwrap
docker/seccomp/: alfred-bwrap.json
docs/: ARCHITECTURE.md  glossary.md  python-conventions.md
docs/adr/: 0001-deepseek-as-primary-provider-slice1.md  0002-in-process-working-memory-slice1.md  0003-plain-asyncio-orchestrator-slice1.md  0004-textual-tui-slice1.md  0005-env-backed-secret-broker-slice1.md  0006-alembic-for-schema-migrations.md  0007-python-toolchain.md  0008-llm-output-trust-tier.md  0009-comms-adapter-protocol-slice2-only.md  0010-canonical-user-id-and-listen-notify.md  0011-per-user-budget-guard.md  0012-file-backed-secret-broker.md  0013-defer-t1-t3-and-dual-llm.md  0014-pluggable-hooks-for-every-action.md  0015-slice4-containerised-quarantined-llm.md  0016-slice4-discord-tui-comms-mcp-rewrite.md  0017-slice3-trust-tier-completion-mcp-transport-dual-llm.md  0018-state-git-proposal-writer-consolidation.md  0019-test-helper-gate-shim.md  0020-supervisor-cli-access-via-postgres-and-state-git.md  0021-merged-proposal-branch-dispatch-for-side-effecting-proposals.md  0022-recoverable-carrier-semantic-for-error-stage-hookpoint-dispatch.md  0023-mtime-polled-hot-reload-for-policies-yaml.md  0024-perf-gate-hardware-budget.md  0025-comms-stdio-transport-line-delimited-and-thin.md  0026-first-party-system-bootstrap-grants-and-boot-hook-registry.md  0027-daemon-comms-runtime-fixture-extractor-first-cut.md  0028-boot-time-authorized-t3-nonce-registration.md  0029-inline-over-wire-quarantine-content-path.md  0030-first-party-kind-full-plugin-ships-in-wheel-under-bound-prefix.md  0031-comms-socket-transport-for-the-foreground-tui.md  0032-gateway-comms-resume-transport.md  0033-core-owned-lifecycle-signalling.md  0034-ci-os-hardware-matrix.md  0035-lifecycle-start-credentials-optional.md  0036-gateway-adapter-hosting-inversion.md  0037-production-quarantine-sandbox-boundary.md  0038-daemon-control-socket.md  0039-gateway-adapter-inbound-bridge.md  0040-connectivity-free-core-mandatory-egress-chokepoint.md  (+15 more)
docs/ci/: required-checks.md
docs/runbooks/: 2026-06-25-discord-flag-day-migration.md  2026-07-03-secrets-file-host-default.md  2026-07-05-postgres-18-redis-8-upgrade.md  alfred-chat-through-the-gateway.md  handle-cap-exceeded.md  observability-stack.md  quarantine-capability-revoked.md  slice-2-discord-smoke.md  slice-3-operator-migration.md  slice-3-plugins.md  slice-3-quarantined-llm.md  slice-3-supervisor.md  slice-4-policy-hot-reload.md  web-fetch-action-timeout.md
docs/subsystems/: comms.md  hooks.md  identity.md  plugins.md  policies.md  quarantine.md  security.md  supervisor.md
ops/alerts/: core.yml  core_test.yml  gateway.yml  gateway_test.yml  quarantine.yml  quarantine_test.yml
ops/grafana/: gateway.json
ops/prometheus/: prometheus.yml
plugins/: __init__.py
plugins/alfred-comms-test/: __init__.py
plugins/alfred_comms_test/: __init__.py  main.py  manifest.toml
plugins/alfred_discord/: addressing_inference.py  binding_emitter.py  crash_emitter.py  discord_gateway.py  dlp_lite.py  gateway_adapter.py  idempotency_store.py  inbound_emitter.py  lifecycle.py  manifest.toml  notifications.py  outbound_dispatcher.py  outbound_handler.py  rate_limit_emitter.py  server.py
plugins/alfred_tui/: README.md  manifest.toml  pyproject.toml
plugins/alfred_tui/src/alfred_tui/: __init__.py  _addressing.py  cohost.py  outbound.py  render.py  server.py  session.py
plugins/alfred_tui/src/alfred_tui/textual/: __init__.py  app.py
plugins/alfred_tui/tests/: conftest.py  test_addressing_signal.py  test_cohost.py  test_gateway_handshake_contract.py  test_inbound_notification.py  test_manifest_well_formed.py  test_render_outbound.py  test_render_wiring.py  test_self_id_from_env.py  test_server_methods.py  test_textual_app.py
scripts/: _experiment_g6_0b_spawn_probe.py  autosquash.sh  check_strict_declarations.py  check_tag_t3.py  docs_check.py  gen_alfred_seccomp.py  quarantine_spawn_probe.py  validate_devin_wiki.py
src/alfred/: _stdio_logging.py  (+1 more)
tests/: _docker_probe.py  _posix_only_tests.py  _sandbox_interp.py  _setup_script_helpers.py  conftest.py
(+1464 files in other folders)
