[project]
name = "alfred"
version = "0.0.1"
description = "AlfredOS - multi-user, multi-persona, security-hardened agentic OS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "AlfredOS contributors" }]
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "openai>=1.40",
  "anthropic>=0.34",
  "textual>=0.80",
  "structlog>=24.1",
  "typer>=0.12",
  "babel>=2.16,<3",  # i18n (Task 3.5)
  "unidecode>=1.3,<2",  # slug derivation transliteration (PR A T8)
  "psycopg[binary]>=3.1,<4",  # runtime: async LISTEN/NOTIFY (IdentityListener, PR A T12); sync identity resolver (via asyncio.to_thread)
  # PR D2: discord.py is the Discord gateway client. We pin >=2.4,<3 because
  # the adapter's surface test (``tests/integration/test_discord_message_surface.py``)
  # pins the message-attribute + client-kwarg shape the adapter touches; a 2.x
  # minor-version rename trips immediately and a 3.x sweep needs a coordinated
  # adapter rewrite. NO ``[voice]`` extra — that pulls in PyNaCl + libsodium,
  # which we don't need for DMs and which complicates the slim-wheel container.
  "discord.py>=2.4,<3",
  # PR D2 audit-DoS mitigation: per-snowflake LRU dedup of the unknown-DM
  # audit row uses cachetools.TTLCache. Slice-3+ may swap to a Redis-backed
  # equivalent for cross-process correctness; cachetools is the in-process
  # shape.
  "cachetools>=5.3,<6",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "testcontainers[postgres]>=4.7",
  "hypothesis>=6.100",      # property-based testing per docs/python-conventions.md
  "mypy>=1.11",
  "pyright>=1.1.380",       # secondary type-checker per ADR-0007
  "ruff>=0.6",
  # black removed: `ruff format` replaces it per ADR-0007.
  "types-toml",
  "types-cachetools",  # PR D2: stubs for the TTLCache import in alfred.comms.discord
  "types-PyYAML",      # PR E: stubs for the YAML walker in tests/adversarial/conftest.py
  "pre-commit>=3.7",        # for the pybabel extract hook (Task 3.5)
  # dev/test only: testcontainers' built-in Postgres helper + alembic CLI
  # both default to psycopg2 for their sync sessions. Not used at runtime
  # (the production sync resolver uses psycopg3 above).
  "psycopg2-binary>=2.9.12",
]

[project.scripts]
alfred = "alfred.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
  "smoke: end-to-end smoke tests (require running stack)",
  "integration: integration tests requiring testcontainers",
]

[tool.coverage.run]
branch = true
source = ["src/alfred"]
omit = ["src/alfred/memory/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75
# Per-package 100% gates are enforced by a second `coverage report --include=... --fail-under=100`
# invocation in CI (see Task 17). pytest --cov-fail-under only takes one threshold value.
# CLAUDE.md hard rule: every security boundary must have 100% line+branch coverage.

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ["src/alfred/memory/migrations/.*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Strict rule set per docs/python-conventions.md §Tooling. ADR-0007 ratifies.
select = ["E", "F", "I", "B", "UP", "N", "S", "ARG", "RET", "SIM", "PTH", "DTZ", "FBT", "PIE", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]
"src/alfred/memory/migrations/**/*.py" = ["N999"]
# FBT001/FBT002/FBT003 (boolean-trap rules) are valid for general API design
# but conflict with Typer's declarative CLI surface — Typer flags are by
# nature ``--flag`` / ``--no-flag`` booleans declared as function parameters
# with bool defaults. The flag IS the argument; the "trap" the rule warns
# against (a positional bool that obscures meaning) does not apply because
# the user always types ``--include-deleted`` rather than a bare ``True``.
"src/alfred/**/cli.py" = ["FBT001", "FBT002", "FBT003"]
"src/alfred/cli/**/*.py" = ["FBT001", "FBT002", "FBT003"]

[tool.ruff.lint.flake8-bugbear]
# B008 (function call in default arg) intentionally allows Typer's declarative
# parameter API. ``typer.Option`` / ``typer.Argument`` / ``typer.Context`` are
# Typer's documented mechanism for declaring CLI flags; the framework itself
# owns the lifecycle of the returned ParameterInfo. The Slice-2 CLI uses the
# modern ``Annotated[type, typer.Option(...)]`` syntax which moves the call
# out of default-arg position entirely (B008 stops firing), but legacy
# call-sites that still default-assign ``typer.Option(...)`` continue to work
# under this exemption. Other B008 hits remain flagged for genuine misuse.
extend-immutable-calls = [
    "typer.Argument",
    "typer.Context",
    "typer.Option",
]

[tool.pyright]
# Secondary type-checker per ADR-0007. mypy is primary; pyright catches what
# mypy misses (especially data-flow narrowing). See docs/python-conventions.md.
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["src/alfred/memory/migrations"]

[tool.babel]
# i18n catalog extract config. See Task 3.5 for the consumer.
domain = "alfred"
input_dirs = ["src/alfred"]
output_dir = "locale"
