[project]
name = "alfred"
version = "0.0.1"
description = "AlfredOS - multi-user, multi-persona, security-hardened agentic OS."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "AlfredOS contributors" }]
dependencies = [
  "pydantic>=2.13.4,<3",
  "pydantic-settings>=2.14.1,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "openai>=1.40",
  "anthropic>=0.34",
  "textual>=0.80",
  "structlog>=24.1",
  "typer>=0.12",
  "babel>=2.16,<3",  # i18n (Task 3.5)
  "unidecode>=1.3,<2",  # slug derivation transliteration (PR A T8)
  "psycopg[binary]>=3.1,<4",  # runtime: async LISTEN/NOTIFY (IdentityListener, PR A T12); sync identity resolver (via asyncio.to_thread)
  # PR D2: discord.py is the Discord gateway client. We pin >=2.4,<3 because
  # the adapter's surface test (``tests/integration/test_discord_message_surface.py``)
  # pins the message-attribute + client-kwarg shape the adapter touches; a 2.x
  # minor-version rename trips immediately and a 3.x sweep needs a coordinated
  # adapter rewrite. NO ``[voice]`` extra — that pulls in PyNaCl + libsodium,
  # which we don't need for DMs and which complicates the slim-wheel container.
  "discord.py>=2.4,<3",
  # PR D2 audit-DoS mitigation: per-snowflake LRU dedup of the unknown-DM
  # audit row uses cachetools.TTLCache. Slice-3+ may swap to a Redis-backed
  # equivalent for cross-process correctness; cachetools is the in-process
  # shape.
  "cachetools>=5.3,<6",
  # redis>=4.2 ships asyncio support in ``redis.asyncio`` natively (no extra
  # needed). Pinned >=5 for the GETDEL primitive exercised by ContentStore
  # (spec §7.2, PR-S3-5).
  "redis>=5",
  # PR-S3-3a: transport-layer Prometheus histograms (spec §7a.1 — perf-002 /
  # perf-009). Four histograms cover the four p99 budgets the supervisor
  # gates on (StdioTransport.dispatch, OutboundDlp.scan, InboundContentScanner.scan,
  # subprocess cold-start). Process-local default registry; the SigNoz /
  # OpenTelemetry bridge is independently configured in ops/.
  "prometheus-client>=0.20,<1",
  # PR-S3-5 (web.fetch): aiohttp is the HTTP client used by the
  # alfred-web-fetch plugin subprocess (plugins/alfred-web-fetch/
  # web_fetch_plugin.py). Pinned >=3.9 because the plugin uses
  # ``ClientTimeout(connect=..., sock_read=...)`` which landed in 3.9.
  "aiohttp>=3.9,<4",
  # PR-S3-6 (err-002): GitPython powers the state.git grant-policy parser
  # (alfred.security.capability_gate._state_git_parser). The parser reads
  # the policies/grants/ tree at a known commit hash and projects it into
  # the Postgres plugin_grants table — the supervisor-side wiring that
  # PR-S3-2 deferred via the fail-loud NotImplementedError stub. Pinned
  # >=3.1 because the parser uses ``repo.commit(sha).tree[path]`` which
  # has been stable since 3.1; pinned <4 because GitPython has not
  # historically followed semver across major bumps.
  "GitPython>=3.1,<4",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-benchmark>=4",    # PR-C: micro-benches for the hooks dispatch perf gate
  "pytest-cov>=5",
  "testcontainers[postgres,redis]>=4.7",
  "hypothesis>=6.100",      # property-based testing per docs/python-conventions.md
  "mypy>=1.11",
  "pyright>=1.1.380",       # secondary type-checker per ADR-0007
  "ruff>=0.6",
  # black removed: `ruff format` replaces it per ADR-0007.
  "types-toml",
  "types-cachetools",  # PR D2: stubs for the TTLCache import in alfred.comms.discord
  "types-PyYAML",      # PR E: stubs for the YAML walker in tests/adversarial/conftest.py
  "pre-commit>=3.7",        # for the pybabel extract hook (Task 3.5)
  # dev/test only: testcontainers' built-in Postgres helper + alembic CLI
  # both default to psycopg2 for their sync sessions. Not used at runtime
  # (the production sync resolver uses psycopg3 above).
  "psycopg2-binary>=2.9.12",
]

[project.scripts]
alfred = "alfred.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

# BUG-2 (PR-S4-11c-2b0): ship the compiled gettext catalogs INSIDE the package so
# a ``pip install``ed alfred carries its translations. Without this the wheel had
# no ``locale/`` and ``_resolve_locale_dir()`` found nothing → translations
# DISABLED (operators saw raw message keys). The bwrapped quarantine child MUST be
# pip-installed under ``/usr``, so this is the layout the dual-LLM child runs under
# (ADR-0030). Map the repo-root ``locale/`` tree to ``alfred/_locale`` inside the
# package; :func:`alfred.i18n.translator._installed_package_locale_dir` resolves it
# via ``importlib.resources.files("alfred") / "_locale"``. ``.po`` sources are
# excluded from the wheel — only the compiled ``.mo`` catalogs are needed at
# runtime; ``pybabel compile`` regenerates ``.mo`` from ``.po`` in CI.
[tool.hatch.build.targets.wheel.force-include]
"locale" = "alfred/_locale"

[tool.pytest.ini_options]
testpaths = ["tests"]
# PR-S3-4: ``plugins/`` lives at the repo root and the flat-layout adapters
# (``plugins.alfred_web_fetch.*``, ``plugins.alfred_comms_test.*``,
# ``plugins.alfred_discord.*``) are imported as top-level packages. They are NOT
# installed via the wheel (they're supervisor-launched MCP subprocesses, not part
# of the alfred-core package), so pytest needs an explicit pythonpath entry to
# discover them during collection.
#
# PR-S4-11c-2b0 (ADR-0030): the quarantined-LLM child MOVED out of repo-root
# ``plugins/alfred_quarantined_llm`` INTO the installed package
# (``alfred.security.quarantine_child``) so it ships in the wheel and is reachable
# under the bwrap ``kind="full"`` policy's ``/usr`` ro-bind. It no longer relies on
# the ``.`` pythonpath entry, which now serves only the remaining repo-root
# flat-layout adapters above.
#
# PR-S4-10: ``plugins/alfred_tui`` is a src-layout uv package whose modules
# import each other by the bare top-level name ``alfred_tui`` (NOT the
# ``plugins.alfred_tui`` namespace path the flat-layout adapters use). It is not
# pip-installed in-tree, so the launcher-spawn round-trip tests
# (``tests/integration/test_tui_round_trip.py`` + ``tests/smoke/test_tui_e2e.py``)
# need its ``src/`` on the import path — mirroring the plugin's own test conftest.
pythonpath = [".", "plugins/alfred_tui/src"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
  "smoke: end-to-end smoke tests (require running stack)",
  "integration: integration tests requiring testcontainers",
  # PR-C: --strict-markers in addopts means undeclared markers fail collection,
  # so this declaration is load-bearing for tests/perf/ (Task 2) and the
  # `make test-perf` / .github/workflows/perf.yml gate (Task 3).
  #
  # pytest-benchmark async wrap (spike — final form lands in tests/perf/conftest.py
  # under Task 2):
  #   A module-level `_run = asyncio.Runner()` is reused across all benches and
  #   the baseline. The bench wraps the awaited dispatch in a sync callable
  #   (`lambda: _run.run(coro_factory())`) passed to `benchmark.pedantic(...)`.
  #   The baseline uses the SAME runner so loop-driver overhead cancels in the
  #   `p99(measured) - p99(baseline)` delta computation.
  "benchmark: micro-benchmark / perf-gate tests (run via `make test-perf` and the perf workflow)",
  # sec-pr-s3-5-003 / H3: opt-out for the host-IP guard tests so they keep
  # their own ``socket.getaddrinfo`` monkeypatch instead of getting the
  # web_fetch conftest's autouse "public-IP" stub on top.
  "no_getaddrinfo_stub: opt out of the web_fetch conftest's autouse getaddrinfo stub",
]

[tool.coverage.run]
branch = true
source = ["src/alfred"]
omit = ["src/alfred/memory/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75
# Per-package 100% gates are enforced by a second `coverage report --include=... --fail-under=100`
# invocation in CI (see Task 17). pytest --cov-fail-under only takes one threshold value.
# CLAUDE.md hard rule: every security boundary must have 100% line+branch coverage.

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ["src/alfred/memory/migrations/.*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Strict rule set per docs/python-conventions.md §Tooling. ADR-0007 ratifies.
select = ["E", "F", "I", "B", "UP", "N", "S", "ARG", "RET", "SIM", "PTH", "DTZ", "FBT", "PIE", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]
# The Slice-4 daemon smoke test drives the deployment the way an operator's
# shell does: git and uv invoked by name (partial path) with fixed-literal
# args. S603/S607 flag untrusted-subprocess / partial-path risks that do not
# apply to a smoke test wiring trusted CLIs with hard-coded literal
# arguments. (The audit-count probe is a parametrised psycopg2 query, so no
# S608 SQL-construction ignore is needed.)
"tests/smoke/test_slice4_daemon_dispatch.py" = ["S603", "S607"]
# The PR-S4-11b comms-spawn smoke boots `alfred daemon start` (+ git/uv by name)
# the same operator-shell way as the daemon-dispatch smoke above — trusted CLIs,
# fixed-literal argv. Same S603/S607 rationale; the audit probe is a parametrised
# psycopg2 query.
"tests/smoke/test_slice4_daemon_comms_spawn.py" = ["S603", "S607"]
# The Slice-4 graduation smoke drives docker compose + the deployed alfred CLI
# by name (partial path) with fixed-literal / repo-owned argv — same trusted-CLI
# rationale as the daemon-dispatch smoke above. No untrusted input reaches a
# subprocess; the one ``sh -c`` script interpolates only a JSON blob built from
# a uuid + fixed literals.
"tests/smoke/test_slice4_graduation.py" = ["S603", "S607"]
# read_state_git_head_sha coverage exercises a real temp git repo via
# trusted `git` invocations (partial path, fixed-literal args).
"tests/unit/cli/daemon/test_daemon_internal_helpers.py" = ["S603", "S607"]
"src/alfred/memory/migrations/**/*.py" = ["N999"]
# FBT001/FBT002/FBT003 (boolean-trap rules) are valid for general API design
# but conflict with Typer's declarative CLI surface — Typer flags are by
# nature ``--flag`` / ``--no-flag`` booleans declared as function parameters
# with bool defaults. The flag IS the argument; the "trap" the rule warns
# against (a positional bool that obscures meaning) does not apply because
# the user always types ``--include-deleted`` rather than a bare ``True``.
"src/alfred/**/cli.py" = ["FBT001", "FBT002", "FBT003"]
"src/alfred/cli/**/*.py" = ["FBT001", "FBT002", "FBT003"]

[tool.ruff.lint.flake8-bugbear]
# B008 (function call in default arg) intentionally allows Typer's declarative
# parameter API. ``typer.Option`` / ``typer.Argument`` / ``typer.Context`` are
# Typer's documented mechanism for declaring CLI flags; the framework itself
# owns the lifecycle of the returned ParameterInfo. The Slice-2 CLI uses the
# modern ``Annotated[type, typer.Option(...)]`` syntax which moves the call
# out of default-arg position entirely (B008 stops firing), but legacy
# call-sites that still default-assign ``typer.Option(...)`` continue to work
# under this exemption. Other B008 hits remain flagged for genuine misuse.
extend-immutable-calls = [
    "typer.Argument",
    "typer.Context",
    "typer.Option",
]

[tool.pyright]
# Secondary type-checker per ADR-0007. mypy is primary; pyright catches what
# mypy misses (especially data-flow narrowing). See docs/python-conventions.md.
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["src/alfred/memory/migrations"]

[tool.babel]
# i18n catalog extract config. See Task 3.5 for the consumer.
domain = "alfred"
input_dirs = ["src/alfred"]
output_dir = "locale"
