[project]
name = "alfred"
version = "0.0.1"
description = "AlfredOS - multi-user, multi-persona, security-hardened agentic OS."
readme = "README.md"
# 3.14.6 floor: CPython 3.14.0–3.14.5 ship a regression (bpo/gh-135228 + the
# related frozen-dataclass __setattr__ fix) where `@dataclass(frozen=True,
# slots=True)`'s generated __setattr__ closes over the pre-slots class, so an
# unknown-attribute assignment raises a spurious `TypeError: super(type, obj)`
# instead of FrozenInstanceError/AttributeError. AlfredOS has 36+ such frozen+slots
# dataclasses (incl. trust-boundary types); 3.14.6 fixes the closure-cell update.
requires-python = ">=3.14.6"
license = { text = "Apache-2.0" }
authors = [{ name = "AlfredOS contributors" }]
dependencies = [
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "sqlalchemy[asyncio]>=2.0.51",
  "asyncpg>=0.31.0",
  "alembic>=1.18.4",
  "openai>=2.43.0",
  "anthropic>=0.111.0",
  "textual>=8.2.7",
  "structlog>=26.1.0",
  "typer>=0.26.7",
  "babel>=2.18.0",  # i18n (Task 3.5)
  "unidecode>=1.4.0",  # slug derivation transliteration (PR A T8)
  "psycopg[binary]>=3.3.4",  # runtime: async LISTEN/NOTIFY (IdentityListener, PR A T12); sync identity resolver (via asyncio.to_thread)
  # PR D2: discord.py is the Discord gateway client. Floor >=2.7.1; the
  # adapter's surface test (``tests/integration/test_discord_message_surface.py``)
  # pins the message-attribute + client-kwarg shape the adapter touches, so a
  # breaking minor trips immediately in CI. No upper cap (the lock tracks latest)
  # — but a discord.py 3.x major would need a coordinated adapter rewrite, so
  # review that bump deliberately when CI surfaces it. No ``[voice]`` extra — it
  # pulls in PyNaCl + libsodium, which we don't need for DMs and which
  # complicates the slim-wheel container.
  "discord.py>=2.7.1",
  # PR D2 audit-DoS mitigation: per-snowflake LRU dedup of the unknown-DM
  # audit row uses cachetools.TTLCache. Slice-3+ may swap to a Redis-backed
  # equivalent for cross-process correctness; cachetools is the in-process
  # shape.
  "cachetools>=7.1.4",
  # redis>=4.2 ships asyncio support in ``redis.asyncio`` natively (no extra
  # needed). ContentStore (spec §7.2, PR-S3-5) uses the GETDEL command, which
  # needs a Redis SERVER >=6.2 (the redis-py client method landed earlier); the
  # deployed server is redis:8. Client floor kept at >=8.0.0 (latest major); no
  # upper cap (the lock tracks latest).
  "redis>=8.0.0",
  # PR-S3-3a: transport-layer Prometheus histograms (spec §7a.1 — perf-002 /
  # perf-009). Four histograms cover the four p99 budgets the supervisor
  # gates on (StdioTransport.dispatch, OutboundDlp.scan, InboundContentScanner.scan,
  # subprocess cold-start). Process-local default registry; the SigNoz /
  # OpenTelemetry bridge is independently configured in ops/.
  "prometheus-client>=0.25.0",
  # PR-S3-5 (web.fetch): aiohttp is the HTTP client used by the
  # alfred-web-fetch plugin subprocess (plugins/alfred-web-fetch/
  # web_fetch_plugin.py). The plugin needs >=3.9 for
  # ``ClientTimeout(connect=..., sock_read=...)``; floor raised to >=3.14.1
  # (latest) in this deps refresh. No upper cap (the lock tracks latest).
  "aiohttp>=3.14.1",
  # PR-S3-6 (err-002): GitPython powers the state.git grant-policy parser
  # (alfred.security.capability_gate._state_git_parser). The parser reads
  # the policies/grants/ tree at a known commit hash and projects it into
  # the Postgres plugin_grants table — the supervisor-side wiring that
  # PR-S3-2 deferred via the fail-loud NotImplementedError stub. Floor
  # >=3.1.50 because the parser uses ``repo.commit(sha).tree[path]`` which
  # has been stable since 3.1. No upper cap (the lock tracks latest), but
  # GitPython has not historically followed semver across majors, so review a
  # 4.x bump deliberately when CI surfaces it.
  "GitPython>=3.1.50",
  # PyYAML is a genuine RUNTIME dependency: config loading
  # (alfred.cli.config), the daemon readiness probes
  # (alfred.cli.daemon._daemon_probes), and the policy loader/watcher
  # (alfred.policies.load / .watcher) all ``import yaml`` at module scope. It
  # was previously satisfied only transitively (via pre-commit, a dev dep) so
  # the editable ``uv sync`` venv happened to carry it — but a NON-editable
  # install of just the runtime deps (#290 PBS image) dropped it, breaking the
  # ``alfred`` entrypoint with ``ModuleNotFoundError: No module named 'yaml'``.
  # Declaring it explicitly fixes that latent gap. ``types-PyYAML`` (dev group)
  # supplies the stubs.
  "PyYAML>=6.0.3",
]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "pytest-benchmark>=5.2.3",    # PR-C: micro-benches for the hooks dispatch perf gate
  "pytest-cov>=7.1.0",
  "testcontainers[postgres,redis]>=4.14.2",
  "hypothesis>=6.155.6",      # property-based testing per docs/python-conventions.md
  "mypy>=2.1.0",
  "pyright>=1.1.410",       # secondary type-checker per ADR-0007
  "ruff>=0.15.18",
  # black removed: `ruff format` replaces it per ADR-0007.
  "types-toml",
  "types-cachetools",  # PR D2: stubs for the TTLCache import in alfred.comms.discord
  "types-PyYAML",      # PR E: stubs for the YAML walker in tests/adversarial/conftest.py
  "pre-commit>=4.6.0",        # for the pybabel extract hook (Task 3.5)
  # dev/test only: testcontainers' built-in Postgres helper + alembic CLI
  # both default to psycopg2 for their sync sessions. Not used at runtime
  # (the production sync resolver uses psycopg3 above).
  "psycopg2-binary>=2.9.12",
]

[project.scripts]
alfred = "alfred.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

# BUG-2 (PR-S4-11c-2b0): ship the compiled gettext catalogs INSIDE the package so
# a ``pip install``ed alfred carries its translations. Without this the wheel had
# no ``locale/`` and ``_resolve_locale_dir()`` found nothing → translations
# DISABLED (operators saw raw message keys). The bwrapped quarantine child MUST be
# pip-installed under ``/usr``, so this is the layout the dual-LLM child runs under
# (ADR-0030). Map the repo-root ``locale/`` tree to ``alfred/_locale`` inside the
# package; :func:`alfred.i18n.translator._installed_package_locale_dir` resolves it
# via ``importlib.resources.files("alfred") / "_locale"``. ``.po`` sources are
# excluded from the wheel — only the compiled ``.mo`` catalogs are needed at
# runtime; ``pybabel compile`` regenerates ``.mo`` from ``.po`` in CI.
[tool.hatch.build.targets.wheel.force-include]
"locale" = "alfred/_locale"

[tool.pytest.ini_options]
testpaths = ["tests"]
# PR-S3-4: ``plugins/`` lives at the repo root and the flat-layout adapters
# (``plugins.alfred_web_fetch.*``, ``plugins.alfred_comms_test.*``,
# ``plugins.alfred_discord.*``) are imported as top-level packages. They are NOT
# installed via the wheel (they're supervisor-launched MCP subprocesses, not part
# of the alfred-core package), so pytest needs an explicit pythonpath entry to
# discover them during collection.
#
# PR-S4-11c-2b0 (ADR-0030): the quarantined-LLM child MOVED out of repo-root
# ``plugins/alfred_quarantined_llm`` INTO the installed package
# (``alfred.security.quarantine_child``) so it ships in the wheel and is reachable
# under the bwrap ``kind="full"`` policy's ``/usr`` ro-bind. It no longer relies on
# the ``.`` pythonpath entry, which now serves only the remaining repo-root
# flat-layout adapters above.
#
# PR-S4-10: ``plugins/alfred_tui`` is a src-layout uv package whose modules
# import each other by the bare top-level name ``alfred_tui`` (NOT the
# ``plugins.alfred_tui`` namespace path the flat-layout adapters use). It is not
# pip-installed in-tree, so the launcher-spawn round-trip tests
# (``tests/integration/test_tui_round_trip.py`` + ``tests/smoke/test_tui_e2e.py``)
# need its ``src/`` on the import path — mirroring the plugin's own test conftest.
pythonpath = [".", "plugins/alfred_tui/src"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
# pytest-asyncio 1.x changed the UNSET default async-fixture loop scope to
# function-scope. Pin it explicitly so a future broad-scope async fixture binds
# deterministically under the new major (inert today — the DB fixtures are sync).
asyncio_default_fixture_loop_scope = "function"
markers = [
  "smoke: end-to-end smoke tests (require running stack)",
  "integration: integration tests requiring testcontainers",
  # Registered because `tests/integration/test_alfred_core_image_bwrap.py` marks
  # itself `pytest.mark.docker` (a live-Docker-daemon requirement). It was never
  # declared, so `--strict-markers` failed collection under pytest 9 — latent on
  # main, exposed by the pytest 9.0.3 -> 9.1.1 bump in this deps refresh.
  "docker: tests requiring a live Docker daemon (testcontainers / real image spawn)",
  # PR-C: --strict-markers in addopts means undeclared markers fail collection,
  # so this declaration is load-bearing for tests/perf/ (Task 2) and the
  # `make test-perf` / .github/workflows/perf.yml gate (Task 3).
  #
  # pytest-benchmark async wrap (spike — final form lands in tests/perf/conftest.py
  # under Task 2):
  #   A module-level `_run = asyncio.Runner()` is reused across all benches and
  #   the baseline. The bench wraps the awaited dispatch in a sync callable
  #   (`lambda: _run.run(coro_factory())`) passed to `benchmark.pedantic(...)`.
  #   The baseline uses the SAME runner so loop-driver overhead cancels in the
  #   `p99(measured) - p99(baseline)` delta computation.
  "benchmark: micro-benchmark / perf-gate tests (run via `make test-perf` and the perf workflow)",
  # sec-pr-s3-5-003 / H3: opt-out for the host-IP guard tests so they keep
  # their own ``socket.getaddrinfo`` monkeypatch instead of getting the
  # web_fetch conftest's autouse "public-IP" stub on top.
  "no_getaddrinfo_stub: opt out of the web_fetch conftest's autouse getaddrinfo stub",
  "real_llm: spends real provider tokens against a live LLM; nightly-only, skip-unless ALFRED_SMOKE_PROVIDER_KEY. Deselected from every per-commit lane via -m 'not real_llm'.",
]

[tool.coverage.run]
branch = true
source = ["src/alfred"]
omit = ["src/alfred/memory/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75
# Per-package 100% gates are enforced by a second `coverage report --include=... --fail-under=100`
# invocation in CI (see Task 17). pytest --cov-fail-under only takes one threshold value.
# CLAUDE.md hard rule: every security boundary must have 100% line+branch coverage.

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ["src/alfred/memory/migrations/.*"]
# ``alfred.cli.main._chat_main`` imports ``alfred_tui.cohost`` (ADR-0031 Shape A:
# the foreground TUI's in-process dial-and-co-host). ``alfred_tui`` is the TUI
# plugin's own src-layout package under ``plugins/alfred_tui/src`` — not on the
# core ``src`` tree, but RESOLVABLE in-tree (the import is runtime-loaded via the
# ``sys.path.insert`` in ``_chat_main``). Putting its src on ``mypy_path`` lets
# mypy resolve the import with REAL types (so ``run_cohosted`` is typed ``-> int``,
# not ``Any``) rather than blanket-ignoring it; mypy still only type-checks the
# files passed on the command line (``src``), so this only affects import
# resolution, not the checked set.
mypy_path = ["plugins/alfred_tui/src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Strict rule set per docs/python-conventions.md §Tooling. ADR-0007 ratifies.
select = ["E", "F", "I", "B", "UP", "N", "S", "ARG", "RET", "SIM", "PTH", "DTZ", "FBT", "PIE", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]
# The Slice-4 daemon smoke test drives the deployment the way an operator's
# shell does: git and uv invoked by name (partial path) with fixed-literal
# args. S603/S607 flag untrusted-subprocess / partial-path risks that do not
# apply to a smoke test wiring trusted CLIs with hard-coded literal
# arguments. (The audit-count probe is a parametrised psycopg2 query, so no
# S608 SQL-construction ignore is needed.)
"tests/smoke/test_slice4_daemon_dispatch.py" = ["S603", "S607"]
# The PR-S4-11b comms-spawn smoke boots `alfred daemon start` (+ git/uv by name)
# the same operator-shell way as the daemon-dispatch smoke above — trusted CLIs,
# fixed-literal argv. Same S603/S607 rationale; the audit probe is a parametrised
# psycopg2 query.
"tests/smoke/test_slice4_daemon_comms_spawn.py" = ["S603", "S607"]
# The Slice-4 graduation smoke drives docker compose + the deployed alfred CLI
# by name (partial path) with fixed-literal / repo-owned argv — same trusted-CLI
# rationale as the daemon-dispatch smoke above. No untrusted input reaches a
# subprocess; the one ``sh -c`` script interpolates only a JSON blob built from
# a uuid + fixed literals.
"tests/smoke/test_slice4_graduation.py" = ["S603", "S607"]
# The G5 live-stack restart smoke drives the three real CLIs (daemon / gateway /
# chat) the operator-shell way: uv/git/alfred by name (partial path) with fixed-
# literal argv — same trusted-CLI rationale as the daemon smokes above. It ALSO
# forks ``alfred chat`` under a PTY via ``os.execvpe`` (S606 shell-less spawn /
# S607 partial path — trusted CLI, fixed literal argv). The synthetic placeholder
# DeepSeek key is named so S105 accepts it on its own (no file-wide ignore), keeping
# secret-scanning active for every future edit in this smoke.
"tests/smoke/test_gateway_chat_restart_smoke.py" = ["S603", "S606", "S607"]
# The G6-0b deployed-link smoke drives docker compose + apparmor_parser + the
# state.git seed script the operator-shell way: docker/sudo/bash by name (partial
# path) with fixed-literal / repo-owned argv (the throwaway compose project name is
# a uuid hex prefix + fixed literals) — same trusted-CLI rationale as the daemon
# smokes above. No untrusted input reaches a subprocess.
"tests/smoke/test_gateway_core_link_smoke.py" = ["S603", "S607"]
# The G6-5 flag-day Discord smoke drives `alfred gateway adapters --wait-ready`
# the operator-shell way: the trusted `sys.executable -m alfred ...` CLI with a
# fixed-literal adapter id + a numeric timeout. S603 flags the now-variable argv
# (adapter id / timeout) though no untrusted input reaches the subprocess — same
# trusted-CLI rationale as the smokes above. (S105 stays active: the env-var name
# is named-noqa'd, so secret-scanning catches any future hardcoded token.)
"tests/smoke/test_discord_gateway_smoke.py" = ["S603"]
# read_state_git_head_sha coverage exercises a real temp git repo via
# trusted `git` invocations (partial path, fixed-literal args).
"tests/unit/cli/daemon/test_daemon_internal_helpers.py" = ["S603", "S607"]
# The G7-3 connectivity-free-core kernel proof drives `docker` by name (partial
# path) with fixed-literal argv to create an internal:true network + probe
# containers — same trusted-CLI rationale as the smokes above. No untrusted input
# reaches a subprocess (the only interpolated value is a uuid-suffixed network/
# container name built from fixed literals).
"tests/integration/egress/test_core_network_isolation_kernel.py" = ["S603", "S607"]
"src/alfred/memory/migrations/**/*.py" = ["N999"]
# FBT001/FBT002/FBT003 (boolean-trap rules) are valid for general API design
# but conflict with Typer's declarative CLI surface — Typer flags are by
# nature ``--flag`` / ``--no-flag`` booleans declared as function parameters
# with bool defaults. The flag IS the argument; the "trap" the rule warns
# against (a positional bool that obscures meaning) does not apply because
# the user always types ``--include-deleted`` rather than a bare ``True``.
"src/alfred/**/cli.py" = ["FBT001", "FBT002", "FBT003"]
"src/alfred/cli/**/*.py" = ["FBT001", "FBT002", "FBT003"]

[tool.ruff.lint.flake8-bugbear]
# B008 (function call in default arg) intentionally allows Typer's declarative
# parameter API. ``typer.Option`` / ``typer.Argument`` / ``typer.Context`` are
# Typer's documented mechanism for declaring CLI flags; the framework itself
# owns the lifecycle of the returned ParameterInfo. The Slice-2 CLI uses the
# modern ``Annotated[type, typer.Option(...)]`` syntax which moves the call
# out of default-arg position entirely (B008 stops firing), but legacy
# call-sites that still default-assign ``typer.Option(...)`` continue to work
# under this exemption. Other B008 hits remain flagged for genuine misuse.
extend-immutable-calls = [
    "typer.Argument",
    "typer.Context",
    "typer.Option",
]

[tool.pyright]
# Secondary type-checker per ADR-0007. mypy is primary; pyright catches what
# mypy misses (especially data-flow narrowing). See docs/python-conventions.md.
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["src/alfred/memory/migrations"]
# ``alfred.cli.main._chat_main`` imports ``alfred_tui.cohost`` (ADR-0031 Shape A:
# the foreground TUI's in-process dial-and-co-host). ``alfred_tui`` is the TUI
# plugin's own src-layout package under ``plugins/alfred_tui/src`` — not on the
# core ``src`` tree, but RESOLVABLE in-tree (the import is runtime-loaded via the
# ``sys.path.insert`` in ``_chat_main``). Adding its src here lets pyright resolve
# the import for the ``src``-scoped check without a per-line suppression; the
# plugin package itself is not added to ``include`` (still ``["src"]``), so pyright
# only reports diagnostics on the core tree.
extraPaths = ["plugins/alfred_tui/src"]

[tool.babel]
# i18n catalog extract config. See Task 3.5 for the consumer.
domain = "alfred"
input_dirs = ["src/alfred"]
output_dir = "locale"
